src/pages/Home/styles.scss
.home-page {
  width: 100%;
  text-align: center;

  padding: 1rem;

  h1 {
    color: #ccc;
    font-size: 400%;
    max-width: 1000px;
    cursor: copy;
  }

  p {
    font-style: italic;
    font-size: 120%;
    padding: 1rem;
    color: #999;
    user-select: none;

    span {
      font-weight: bold;
      border: 1px solid #222;
      display: inline-block;
      padding: 5px 10px;
      border-radius: 3px;
      background-color: #333;
      cursor: pointer;
    }

    a {
      color: #999;
      text-decoration: none;
      font-weight: 600;

      &:hover {
        text-shadow: 1px 1px 1px #000;
      }
    }
  }
}

